[package]
name = "pcmanager"
version = "0.1.0"
authors = ["cong wu <1875486458@qq.com>"]
build = "build.rs"

[dependencies]
derive-new = "0.5"
encoding = "0.2"
cpp = "0.3"
csv = "1.0.0-beta.4"
serde = "1"
serde_derive = "1"
winreg = "0.4"
subprocess  = { git = "https://github.com/woodgear/rust-subprocess.git" }
[build-dependencies]
cpp_build = "0.3"